Sat Feb 13 20:53:34 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc(got_word): Ensure heading is in a normal range.

	* htdoc/RELEASE.html: Added information on the bugs fixed in 3.1.1.

	* htdoc/attrs.html: Added info on the changed syntax of the pdf_parser
	attribute in 3.1.0 and later.
	
Sat Feb 13 20:29:26 1999  Marjolein Katsma <webmaster@javawoman.com>

	* htdoc/*.html: Cleaned up HTML, fixed typos, added appropriate
	HTML 4.0 syntax, added DTDs to files, other minor fixed.

Fri Feb 12 19:58:28 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* .version: Bump for version 3.1.1.

	* configure.in, configure: Fix problems determining getpeername
	syntax under IRIX.

	* db/os/os_map.c: Fixed problems on AlphaLinux pointed out by Paul
	J. Meyer.

Fri Feb 12 12:00:25 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc: Fix crashes noted by Frank Richter.

	* contrib/htparsedoc/parse_word_doc.pl: Use updated version (with
	fixed line breaks).

	* htnotify/htnotify.cc: Add patch mentioned in Feb 8 documentation
	change.

Thu Feb 11 00:29:42 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htcommon/DocumentRef.cc (NUM_ASSIGN): Expand from unsigned types.
	(getnum): Use temporary for "unsigned short", and memcpy data into
	it instead of assignment.

Tue Feb  9 19:21:55 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/FAQ.html, htdoc/where.html: Update for 3.1.0 release.

	* htdoc/uses.html: Added remaining backlog.

	* htdoc/RELEASE.html: Finish up release notes for 3.1.0.

Tue Feb  9 19:19:13 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc: Ensure we remove the temporary file.

Mon Feb  8 20:28:07 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/ma_menu: Change relative URLs to absolute URLs to
	www.htdig.org to reflect the changing mail archive.

	* htdoc/install.html: Add notes on new configure flags to set
	CONFIG variables.
