@@ -6,7 +6,7 @@
 //
 //
 #if RELEASE
-static char RCSid[] = "$Id: Document.cc,v 1.34 1999/02/04 00:14:26 ghutchis Exp $";
+static char RCSid[] = "$Id: Document.cc,v 1.34.2.1 1999/02/15 04:44:30 ghutchis Exp $";
 #endif
 
 #include <signal.h>
@@ -445,6 +445,9 @@ Document::RetrieveHTTP(time_t date)
 
     if (debug > 2)
 	cout << "Read a total of " << document_length << " bytes\n";
+
+    if (document_length = max_doc_size && contentLength != -1)
+      document_length = contentLength;
     return Document_ok;
 }
 
@@ -595,8 +598,8 @@ Document::RetrieveLocal(time_t date, char *filename)
 	    break;
     }
     fclose(f);
-    document_length = contents.length();
-    contentLength = document_length;
+    document_length = stat_buf.st_size;
+    contentLength = contents.length();
 
     if (debug > 2)
 	cout << "Read a total of " << document_length << " bytes\n";
